SECURITY: Remove sensitive user data and add to .gitignore
- Remove users.json and users.json.backup from Git tracking
- Add user database files to .gitignore to prevent future exposure
- Replace real email addresses with dummy data for demo purposes
- Fix GitGuardian security alert for exposed email passwords

Resolves: Company Email Password exposure vulnerability

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ Thumbs.db
 .env
 .env.local
 
+# User database files (contain sensitive data)
+users.json
+users.json.backup
+*.json.backup
+
 # Jupyter Notebook checkpoints
 .ipynb_checkpoints/
 
